xrpl-wasm-stdlib/xrpl-macros/tests/pubkey/fail_bad_prefix.stderr
error: Invalid key: 04C7387FFC25C156CA7F8A6D760C8D01EF642CEE9CE4680C33FFB3FF39AFECFE70
 --> tests/pubkey/fail_bad_prefix.rs:5:13
  |
5 |     pubkey!("04C7387FFC25C156CA7F8A6D760C8D01EF642CEE9CE4680C33FFB3FF39AFECFE70");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
